# Aletheia

./: Cargo.toml  LICENSE  README.md  block_proof.json
aletheia/host/: .gitignore  Cargo.toml  proof_output.json
aletheia/host/src/: main.rs
aletheia/methods/guest/: Cargo.toml
aletheia/methods/guest/src/: main.rs
data_extractor/: .env  Cargo.toml
data_extractor/src/: lib.rs  main.rs
data_extractor/src/json_rpc/: json_rpc_methods.rs
data_extractor/src/types/: types.rs
proof_verification/: .env.example  app.js  index.js  package-lock.json  package.json  r0-vkey.json
src/: main.rs
src/json_rpc/: mod.rs
