[package]
name = "data_extractor"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { version = "0.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"
serde_json = "1.0.145"
